--- a/css/Pembayaran.css
+++ b/css/Pembayaran.css
@@ -53,30 +53,33 @@ hr {
 .va-list {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  max-height: 300px;
-  overflow-y: auto;
-  margin-bottom: 20px;
+  gap: 1em;
 }
 
 .va-item {
-  background: #f7f9fc;
-  border: 1px solid #e1e1e1;
-  border-radius: 6px;
-  padding: 12px 16px;
+
   display: flex;
-  justify-content: space-between;
+  
   align-items: center;
+  background-color: #f2f2f2;
+  padding: 1em;
+  border-radius: 8px;
+  gap: 1em;
   cursor: pointer;
-  transition: background 0.2s;
+}
+.va-item input[type="radio"] {
+  margin-right: 0.5em;
 }
 
-.va-item:hover {
-  background-color: #e9f1ff;
+.va-item span {
+  flex: 1;
+  text-align: left;
+  font-weight: bold;
 }
 
 .va-item img {
   height: 30px;
+  width: auto;
 }
 
 .btn-lanjut {
@@ -91,6 +94,7 @@ hr {
 }
 .btn-lanjut {
   display: inline-block;
+  width: 90%;
   text-align: center;
   background-color: #2363ad;
   color: #fff;
@@ -102,8 +106,10 @@ hr {
   border: none;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin-top: 1.5em; /* ✅ tambahkan jarak di sini */
 }
 
 .btn-lanjut:hover {
   background-color: #1b4f8c;
 }
+
